foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/Case_Owner_Assignment_Based_On_Subject__mdt.object-meta.xml
<CustomObject>
    <label>Case Owner Assignment Based On Subject</label>
    <pluralLabel>Case Owner Assignment Based On Subjects</pluralLabel>
</CustomObject>