foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/Collection_Manager_CC__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager_CC__c</fullName>
    <label>Collection Manager CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>