foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/Overload_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Overload_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overload Applicable?</label>
    <type>Checkbox</type>
</CustomField>