foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <label>Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>