foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
                <default>true</default>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>