foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/Subject_Check_Condition__c.field-meta.xml
<CustomField>
    <fullName>Subject_Check_Condition__c</fullName>
    <label>Subject Check Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>containsIgnoreCase</fullName>
                <default>true</default>
                <label>containsIgnoreCase</label>
            </value>
            <value>
                <fullName>startsWithIgnoreCase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>