foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/fields/User_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Type__c</fullName>
    <label>User Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance L0</fullName>
                <default>true</default>
                <label>Finance L0</label>
            </value>
            <value>
                <fullName>Finance L1</fullName>
            </value>
            <value>
                <fullName>Finance L2</fullName>
            </value>
            <value>
                <fullName>Finance L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>