foundation-objs/main/default/objects/Case_Owner_Assignment_Based_On_Subject__mdt/listViews/Personalised_View.listView-meta.xml
<ListView>
    <fullName>Personalised_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Subject__c</columns>
    <columns>Subject_Check_Condition__c</columns>
    <columns>Owner_Id__c</columns>
    <columns>Collection_Manager_CC__c</columns>
    <columns>Priority__c</columns>
    <columns>User_Role_Type__c</columns>
    <columns>Overload_Applicable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Personalised View</label>
</ListView>